# neuropixel-pipeline

./: .gitignore  Dockerfile.dev  README.md  TODO.md  compose-dev.yaml  docker-compose.yaml  docker-compose.yml  install-packages.sh  pykilosort-requirements.txt  pyproject.toml  pyproject.toml.broken  requirements.txt  setup.py
.devcontainer/: devcontainer.json
kubernetes/: neuropixel-gpu-minion.yaml  notebook-gpu.yaml  notebook.yaml
neuropixel_pipeline/: __init__.py  ingest.py  kilosort.py  metadata.py  pydantic_schema.py  utils.py
neuropixel_pipeline/api/: __init__.py  clustering.py  clustering_task.py  ecephys_common.py  metadata.py  postclustering.py  preclustering.py
neuropixel_pipeline/helpers/: atlab.py
neuropixel_pipeline/helpers/atlab/: __init__.py  __main__.py  session_search.py
neuropixel_pipeline/modules/atlab/: __init__.py  __main__.py  common.py  kilosort_params.py  path_kind.py  probe_setup.py  rig_search.py  session_search.py
neuropixel_pipeline/readers/: __init__.py  adapters.py  kilosort.py  labview.py  phy.py
neuropixel_pipeline/schemata/: __init__.py  base.py  dj_utils.py  ephys.py  probe.py
notebooks/: kilosort_triggering.ipynb  labview_metadata_reader.ipynb  package_check.ipynb  populate_atlab.ipynb  populate_helper.ipynb  populate_test.ipynb  populate_test_MD.ipynb  presentation.ipynb  schemas.ipynb
notebooks/temp/: testing.ipynb  testing_kilosort.ipynb
