[build-system]
requires = ["setuptools ", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuropixel_pipeline"
authors = [
    {name = "Christos papadopoulos", email = "cpapadop@bcm.edu"},
]
description = "Schemata and libraries for ingesting and clustering Neuropixel data"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["neuropixel", "neuroscience", "pipeline"]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "datajoint==0.12.9",
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
# This also needs pykilosort-requirements.txt to be installed manually (for now), can likely just add them here directly if nothing else
# kilosort = ["pykilosort @ git+https://github.com/MouseLand/pykilosort"]
kilosort = ["pykilosort @ git+https://github.com/Cpapa97/pykilosort@atlab"]
# switch to cupy-cuda110 for CUDA 11.0, also just "cupy" seems to fail because cuda isn't found on the dev environment system at all
cuda = ["nvidia-cuda-runtime-cu11", "nvidia-cuda-nvcc-cu11"]

[tool.setuptools]
packages = ["neuropixel_pipeline"]

[tool.setuptools.dynamic]
version = {attr = "neuropixel_pipeline.__version__"}
