[build-system]
requires = ["setuptools ", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuropixel_pipeline"
authors = [
    {name = "Christos papadopoulos", email = "cpapadop@bcm.edu"},
]
description = "Schemata and libraries for ingesting and clustering Neuropixel data"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["neuropixel", "neuroscience", "pipeline"]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic>=2.0a1",
    "devtools",
    "datajoint==0.12.9",
    "numpy==1.23", # currently needed to deal with np.float deprecation in datajoint
    "polars",
    "pandas",
    "h5py",
]
dynamic = ["version"]

[project.optional-dependencies]
kilosort = [] # this will point to the pykilosort that we use

[tool.setuptools]
packages = ["neuropixel_pipeline"]

[tool.setuptools.dynamic]
version = {attr = "neuropixel_pipeline.__version__"}

[tool.ruff]
line-length = 120
target-version = "py38"